# frontier-crafter

./: .gitignore  Makefile  README.md  api.py  pyproject.toml  tools.py
api/: Makefile  api.py  models.py  pyproject.toml  schema.py  tools.py
api/tests/: test_api.py
web/: Makefile  design.md  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: NavBar.tsx
web/src/pages/: CraftingPlanner.tsx  GroupCrafting.tsx  Help.tsx  HomePage.tsx  ItemDetails.tsx
